--- a/Jobsity.Challenge.FinancialChat.CrossCutting/Jobsity.Challenge.FinancialChat.CrossCutting.csproj
+++ b/Jobsity.Challenge.FinancialChat.CrossCutting/Jobsity.Challenge.FinancialChat.CrossCutting.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="11.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Jobsity.Challenge.FinancialChat.Domain\Jobsity.Challenge.FinancialChat.Domain.csproj" />
+    <ProjectReference Include="..\Jobsity.Challenge.FinancialChat.Infra\Jobsity.Challenge.FinancialChat.Infra.csproj" />
     <ProjectReference Include="..\Jobsity.Challenge.FinancialChat.Interfaces\Jobsity.Challenge.FinancialChat.Interfaces.csproj" />
+    <ProjectReference Include="..\Jobsity.Challenge.FinancialChat.UseCases\Jobsity.Challenge.FinancialChat.UseCases.csproj" />
   </ItemGroup>
 
 </Project>
