--- a/Jobsity.Challenge.FinancialChat.SignalR/Jobsity.Challenge.FinancialChat.SignalR.csproj
+++ b/Jobsity.Challenge.FinancialChat.SignalR/Jobsity.Challenge.FinancialChat.SignalR.csproj
@@ -7,12 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Jobsity.Challenge.FinancialChat.CrossCutting\Jobsity.Challenge.FinancialChat.CrossCutting.csproj" />
     <ProjectReference Include="..\Jobsity.Challenge.FinancialChat.Domain\Jobsity.Challenge.FinancialChat.Domain.csproj" />
     <ProjectReference Include="..\Jobsity.Challenge.FinancialChat.Infra\Jobsity.Challenge.FinancialChat.Infra.csproj" />
+    <ProjectReference Include="..\Jobsity.Challenge.FinancialChat.UseCases\Jobsity.Challenge.FinancialChat.UseCases.csproj" />
   </ItemGroup>
 
 </Project>
