--- a/Jobsity.Challenge.FinancialChat.UseCases/Jobsity.Challenge.FinancialChat.UseCases.csproj
+++ b/Jobsity.Challenge.FinancialChat.UseCases/Jobsity.Challenge.FinancialChat.UseCases.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Jobsity.Challenge.FinancialChat.Interfaces\Jobsity.Challenge.FinancialChat.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
