--- a/Jobsity.Challenge.FinancialChat.CrossCutting/Jobsity.Challenge.FinancialChat.CrossCutting.csproj
+++ b/Jobsity.Challenge.FinancialChat.CrossCutting/Jobsity.Challenge.FinancialChat.CrossCutting.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
