--- a/Jobsity.Challenge.FinancialChat.Infra/Jobsity.Challenge.FinancialChat.Infra.csproj
+++ b/Jobsity.Challenge.FinancialChat.Infra/Jobsity.Challenge.FinancialChat.Infra.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
