Starting to work in the bot to process the commands.

--- a/Jobsity.Challenge.FinancialChat.Bot/appsettings.json
+++ b/Jobsity.Challenge.FinancialChat.Bot/appsettings.json
@@ -6,13 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowedOrigins": [
-    "http://localhost:52330"
-  ],
   "AllowedCommands": [
-    "/stock="
-  ],
-  "Apis": {
-    "UrlBot": "https://localhost:7152"
-  }
+    {
+      "Command": "/stock=",
+      "ApiUrl": "https://stooq.com/q/l/?s={0}&f=sd2t2ohlcv&h&e=csv"
+    }
+  ]
 }
