--- a/Jobsity.Challenge.FinancialChat.CrossCutting/Jobsity.Challenge.FinancialChat.CrossCutting.csproj
+++ b/Jobsity.Challenge.FinancialChat.CrossCutting/Jobsity.Challenge.FinancialChat.CrossCutting.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
