--- a/Jobsity.Challenge.FinancialChat.Infra/Jobsity.Challenge.FinancialChat.Infra.csproj
+++ b/Jobsity.Challenge.FinancialChat.Infra/Jobsity.Challenge.FinancialChat.Infra.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
