Implemeting getting the command value.

--- a/Jobsity.Challenge.FinancialChat.Bot/appsettings.json
+++ b/Jobsity.Challenge.FinancialChat.Bot/appsettings.json
@@ -8,8 +8,10 @@
   "AllowedHosts": "*",
   "AllowedCommands": [
     {
+      "Name": "StockPrice",
       "Command": "/stock=",
-      "ApiUrl": "https://stooq.com/q/l/?s={0}&f=sd2t2ohlcv&h&e=csv"
+      "BaseUrl": "https://stooq.com/q/l/",
+      "QueryString": "?s={0}&f=sd2t2ohlcv&h&e=csv"
     }
   ]
 }
