--- a/Jobsity.Challenge.FinancialChat.Bot/Jobsity.Challenge.FinancialChat.Bot.csproj
+++ b/Jobsity.Challenge.FinancialChat.Bot/Jobsity.Challenge.FinancialChat.Bot.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.2.1" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UseCases\" />
+    <ProjectReference Include="..\Jobsity.Challenge.FinancialChat.Core\Jobsity.Challenge.FinancialChat.Core.csproj" />
   </ItemGroup>
 
 </Project>
