Implementing posting a command result into chat.

--- a/Jobsity.Challenge.FinancialChat.Bot/appsettings.json
+++ b/Jobsity.Challenge.FinancialChat.Bot/appsettings.json
@@ -8,10 +8,12 @@
   "AllowedHosts": "*",
   "AllowedCommands": [
     {
-      "Name": "StockPrice",
-      "Command": "/stock=",
       "BaseUrl": "https://stooq.com/q/l/",
+      "Command": "/stock=",
+      "Converter": "Jobsity.Challenge.FinancialChat.Bot.Domain.Converters.ConvertStockPrice",
+      "Name": "StockPrice",
       "QueryString": "?s={0}&f=sd2t2ohlcv&h&e=csv"
     }
-  ]
+  ],
+  "ChatApiUrl": "https://localhost:5001/"
 }
