--- a/Jobsity.Challenge.FinancialChat.Bot/Jobsity.Challenge.FinancialChat.Bot.csproj
+++ b/Jobsity.Challenge.FinancialChat.Bot/Jobsity.Challenge.FinancialChat.Bot.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="27.2.1" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
