--- a/Jobsity.Challenge.FinancialChat.Bot/appsettings.json
+++ b/Jobsity.Challenge.FinancialChat.Bot/appsettings.json
@@ -12,7 +12,12 @@
       "Command": "/stock=",
       "Converter": "Jobsity.Challenge.FinancialChat.Bot.Domain.Converters.ConvertStockPrice",
       "Name": "StockPrice",
-      "QueryString": "?s={0}&f=sd2t2ohlcv&h&e=csv"
+      "QueryString": "?s={0}&f=sd2t2ohlcv&h&e=csv",
+      "MessageBroker": {
+        "HostName": "localhost",
+        "Queue": "jobsity.commands.stocks",
+        "RoutingKey": "jobsity.commands.stocks"
+      }
     }
   ],
   "ChatApiUrl": "https://localhost:5001/"
