--- a/Jobsity.Challenge.FinancialChat.Bot/Properties/launchSettings.json
+++ b/Jobsity.Challenge.FinancialChat.Bot/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Jobsity.Challenge.FinancialChat.Bot": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7152;http://localhost:5152",
       "environmentVariables": {
