Changing hostname to connectionstring for RabbitMQ.

--- a/Jobsity.Challenge.FinancialChat.Bot/appsettings.json
+++ b/Jobsity.Challenge.FinancialChat.Bot/appsettings.json
@@ -14,7 +14,7 @@
       "Name": "StockPrice",
       "QueryString": "?s={0}&f=sd2t2ohlcv&h&e=csv",
       "MessageBroker": {
-        "HostName": "localhost",
+        "ConnectionString": "amqp://guest:guest@localhost:5672",
         "Queue": "jobsity.commands.stocks",
         "RoutingKey": "jobsity.commands.stocks"
       }
