--- a/Jobsity.Challenge.FinancialChat.Consumer/appsettings.json
+++ b/Jobsity.Challenge.FinancialChat.Consumer/appsettings.json
@@ -8,7 +8,7 @@
   "ChatApiUrl": "https://localhost:5001/",
   "IntervalWorkerActive": 5000,
   "MessageBroker": {
-    "HostName": "localhost",
+    "ConnectionString": "amqp://guest:guest@localhost:5672",
     "Queue": "jobsity.commands.stocks",
     "RoutingKey": "jobsity.commands.stocks"
   }
