Including docker-compose-prd.

--- a/docker-compose-prd.yml
+++ b/docker-compose-prd.yml
@@ -2,14 +2,12 @@ version: "3.5"
 
 services:
   nginx:
+    image: danillopneto/jobsitychallengefinancialchat_nginx
     depends_on:
       - signalr
       - bot-api
       - client
-    restart: always # because it is routing traffic to our entire app
-    build:
-      dockerfile: Dockerfile
-      context: ./nginx
+    restart: always
     ports:
       - "80:80"
 
@@ -41,45 +39,37 @@ services:
         - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
 
   client:
+    image: danillopneto/jobsitychallengefinancialchat_client
     depends_on:
       - signalr
       - bot-api
-    build:
-      context: ./src
-      dockerfile: ./Jobsity.Challenge.FinancialChat.Web/Dockerfile
     restart: always
 
   signalr:
+    image: danillopneto/jobsitychallengefinancialchat_signalr
     depends_on:
       - bot-api
     environment:
       - ConnectionStrings__DefaultConnection=server=db;port=3306;userid=dbuser;password=dbuserpassword;database=financialchat;
       - Apis__UrlBot=http://bot-api/bot-api/v1/
-    build:
-      context: ./src
-      dockerfile: ./Jobsity.Challenge.FinancialChat.SignalR/Dockerfile
     restart: always
 
   bot-api:
+    image: danillopneto/jobsitychallengefinancialchat_bot-api
     depends_on:
       - rabbitmq
     environment:
       - AllowedCommands__0__MessageBroker__ConnectionString=amqp://guest:guest@rabbitmq:5672/
-    build:
-      context: ./src
-      dockerfile: ./Jobsity.Challenge.FinancialChat.Bot/Dockerfile
     restart: always
 
   consumer:
+    image: danillopneto/jobsitychallengefinancialchat_consumer
     depends_on:
       - rabbitmq
       - client
     environment:
       - ChatApiUrl=http://signalr/chat
       - MessageBroker__ConnectionString=amqp://guest:guest@rabbitmq:5672/
-    build:
-      context: ./src
-      dockerfile: ./Jobsity.Challenge.FinancialChat.Consumer/Dockerfile
     restart: on-failure
 
 volumes:
