Defining Url for SignalR application.

--- a/docker-compose-prd.yml
+++ b/docker-compose-prd.yml
@@ -20,29 +20,23 @@ services:
       MYSQL_PASSWORD: dbuserpassword
     volumes:
       - dbdata:/var/lib/mysql
-    ports:
-      - "0:3306"
     restart: always
 
   rabbitmq:
     image: rabbitmq:3.9-management-alpine
-    ports:
-        - 0:5672
-        - 15672:15672
     healthcheck:
       test: [ "CMD", "nc", "-z", "localhost", "5672" ]
       interval: 5s
       timeout: 15s
       retries: 1
-    volumes:
-        - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
-        - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
 
   client:
     image: danillopneto/jobsitychallengefinancialchat_client
     depends_on:
       - signalr
       - bot-api
+    environment:
+      - SignalRUrl=http://signalr/
     restart: always
 
   signalr:
