--- a/src/Jobsity.Challenge.FinancialChat.SignalR/appsettings.json
+++ b/src/Jobsity.Challenge.FinancialChat.SignalR/appsettings.json
@@ -13,6 +13,6 @@
     "/stock="
   ],
   "Apis": {
-    "UrlBot": "http://localhost/bot-api/v1/"
+    "UrlBot": "http://localhost:5152/bot-api/v1/"
   }
 }
