--- a/src/Jobsity.Challenge.FinancialChat.Web/appsettings.json
+++ b/src/Jobsity.Challenge.FinancialChat.Web/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SignalRUrl": "https://localhost:5001/"
 }
