--- a/docker-compose-prd.yml
+++ b/docker-compose-prd.yml
@@ -12,7 +12,7 @@ services:
       - "80:80"
 
   db:
-    image: mysql:latest
+    image: mysql:8.0.28
     environment:
       MYSQL_RANDOM_ROOT_PASSWORD: 1
       MYSQL_DATABASE: financialchat
