--- a/src/Jobsity.Challenge.FinancialChat.SignalR/appsettings.json
+++ b/src/Jobsity.Challenge.FinancialChat.SignalR/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;userid=dbuser;password=dbuserpassword;database=financialchat;"
+    "DefaultConnection": "server=localhost;port=3306;userid=dbuser;password=dbuserpassword;database=financialchat;SslMode=none"
   },
   "Logging": {
     "LogLevel": {
