Adding a simple project with .NET Identity to manage the users for the application.

--- a/src/Jobsity.Challenge.FinancialChat.SignalR/appsettings.json
+++ b/src/Jobsity.Challenge.FinancialChat.SignalR/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;userid=dbuser;password=dbuserpassword;database=financialchat;SslMode=none"
+    "DefaultConnection": "Data Source=localhost,1433;Initial Catalog=FinancialChat;User Id=SA;Password=DockerSql2019!;"
   },
   "Logging": {
     "LogLevel": {
@@ -13,7 +13,7 @@
     "/stock="
   ],
   "Apis": {
-    "UrlBot": "http://localhost:5152/bot-api/v1/"
+    "UrlBot": "https://localhost:7152/bot-api/v1/"
   },
   "LimitOfMessagesPerRoom": 50
 }
