--- a/src/Jobsity.Challenge.FinancialChat.UI.Web/Properties/launchSettings.json
+++ b/src/Jobsity.Challenge.FinancialChat.UI.Web/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -10,12 +10,12 @@
   "profiles": {
     "Jobsity.Challenge.FinancialChat.UI.Web": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7125;http://localhost:5125",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7125;http://localhost:5125",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
